# static/swagger.json
@@ -19,7 +19,27 @@
     "/azure/criar-grupo-recursos": {
       "post": {
         "summary": "Cria um Grupo de Recursos na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação do Grupo de Recursos",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome do Grupo de Recursos"
+                },
+                "regiao": {
+                  "type": "string",
+                  "description": "Região onde o Grupo de Recursos será criado"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Grupo de Recursos criado com sucesso"
@@ -34,7 +54,23 @@
     "/azure/criar-conta-armazenamento": {
       "post": {
         "summary": "Cria uma Conta de Armazenamento na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da Conta de Armazenamento",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da Conta de Armazenamento"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Conta de Armazenamento criada com sucesso"
@@ -49,7 +85,27 @@
     "/azure/criar-vnet": {
       "post": {
         "summary": "Cria uma VNET na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da VNET",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da VNET"
+                },
+                "endereco": {
+                    "type": "string",
+                    "description": "Endereço da VNET (CIDR)"
+                  }
+                }
+              }
+            }
+        ],
         "responses": {
           "200": {
             "description": "VNET criada com sucesso"
@@ -64,7 +120,27 @@
     "/azure/criar-subrede-publica": {
       "post": {
         "summary": "Cria uma Subrede Pública na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da Subrede Pública",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da Subrede Pública"
+                },
+                "endereco": {
+                  "type": "string",
+                  "description": "Endereço da Subrede Pública (CIDR)"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Subrede Pública criada com sucesso"
@@ -79,7 +155,27 @@
     "/azure/criar-subrede-privada": {
       "post": {
         "summary": "Cria uma Subrede Privada na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da Subrede Privada",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da Subrede Privada"
+                },
+                "endereco": {
+                  "type": "string",
+                  "description": "Endereço da Subrede Privada (CIDR)"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Subrede Privada criada com sucesso"
@@ -94,7 +190,23 @@
     "/azure/criar-grupo-seguranca-linux": {
       "post": {
         "summary": "Cria um Grupo de Segurança Linux na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação do Grupo de Segurança Linux",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome do Grupo de Segurança Linux"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Grupo de Segurança Linux criado com sucesso"
@@ -109,7 +221,23 @@
     "/azure/criar-grupo-seguranca-windows": {
       "post": {
         "summary": "Cria um Grupo de Segurança Windows na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação do Grupo de Segurança Windows",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome do Grupo de Segurança Windows"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Grupo de Segurança Windows criado com sucesso"
@@ -124,7 +252,23 @@
     "/azure/criar-interface-ip-linux": {
       "post": {
         "summary": "Cria uma Interface de IP Público Linux na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da Interface de IP Público Linux",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da Interface de IP Público Linux"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Interface de IP Público Linux criada e associada com sucesso"
@@ -139,7 +283,23 @@
     "/azure/criar-interface-ip-windows": {
       "post": {
         "summary": "Cria uma Interface de IP Público Windows na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da Interface de IP Público Windows",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da Interface de IP Público Windows"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Interface de IP Público Windows criada e associada com sucesso"
@@ -154,7 +314,32 @@
     "/azure/criar-maquina-virtual-linux": {
       "post": {
         "summary": "Cria uma Máquina Virtual Linux na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da Máquina Virtual Linux",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da Máquina Virtual Linux"
+                },
+                "usuario": {
+                  "type": "string",
+                  "description": "Nome do usuário da Máquina Virtual Linux"
+                },
+                "senha": {
+                  "type": "string",
+                  "description": "Senha da Máquina Virtual Linux"
+                }
+              },
+              "required": ["nome", "usuario", "senha"]
+              }
+            }
+        ],
         "responses": {
           "200": {
             "description": "Máquina Virtual Linux criada com sucesso"
@@ -169,7 +354,32 @@
     "/azure/criar-maquina-virtual-windows": {
       "post": {
         "summary": "Cria uma Máquina Virtual Windows na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação da Máquina Virtual Windows",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome da Máquina Virtual Windows"
+                },
+                "usuario": {
+                  "type": "string",
+                  "description": "Nome do usuário da Máquina Virtual Windows"
+                },
+                "senha": {
+                  "type": "string",
+                  "description": "Senha da Máquina Virtual Windows"
+                }
+              },
+              "required": ["nome", "usuario", "senha"]
+              }
+            }
+        ],
         "responses": {
           "200": {
             "description": "Máquina Virtual Windows criada com sucesso"
@@ -184,7 +394,23 @@
     "/azure/criar-load-balancer": {
       "post": {
         "summary": "Cria um Load Balancer na Azure",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Informações para criação do Load Balancer",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "type": "string",
+                  "description": "Nome do Load Balancer"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Load Balancer criado com sucesso"
